fix create user through modal

--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -10,10 +10,9 @@
         <button type="button" class="close" data-dismiss="modal">&times;</button>
         <h4 class="modal-title">Ingresar jugador</h4>
       </div>
-      <div class="date-modal-body modal-body"></div>
-      <%= form_for @user, remote: true do |f| %>
-        <div class="form-group">
-          <div class='block-form'>
+      <div class="date-modal-body modal-body">
+        <%= form_for @user, url: users_path, remote: true, method: :post do |f| %>
+          <div class="form-group">
             <%= f.label :nombre, class: 'user-form' %>
             <%= f.text_field :name %>
           </div>
@@ -33,14 +32,12 @@
             <%= f.label :carrera, class: 'user-form' %>
             <%= f.text_field :career %>
           </div>
-        </div>
-
-        <div class="modal-footer">
-        <%= f.submit "Jugar", class: "user-button", 'data-dismiss' => 'modal' %>
-          <div class="clearfix"></div>
-     </div>
-<% end %>
+          <div class="modal-footer">
+            <%= f.submit "Jugar", class: "user-button" %>
+            <div class="clearfix"></div>
+          </div>
+        <% end %>
+      </div>
     </div>
-
   </div>
 </div>
