--- a/app/views/users/create.js.erb
+++ b/app/views/users/create.js.erb
@@ -1,2 +1,28 @@
-$('#myModal').modal('hide');
+if (<%= @user.errors.empty? %>) {
+  $('#myModal').modal('hide');
+
+  status = 1;
+  tile_index = Math.floor((Math.random() * 4));
+  lose = false;
+  allMovements = [];
+  movements = {
+    allMovements,
+    getMovement: function(pos){
+      return this.allMovements[pos];
+    },
+  }
+
+  document.getElementById('right').className = '';
+  document.getElementById('can').getContext('2d').clearRect(0, 0, can.width, can.height);
+  console.log(status, tile_index, lose, allMovements, movements);
+  $('#user_name').val('');
+  $('#user_last_name').val('');
+  $('#user_email').val('');
+  $('#user_address').val('');
+  $('#user_career').val('');
+  $('#user_won').val(false);
+  $('#toptier-logo').fadeIn(1000);
+} else {
+  // Show errors
+}
 
