--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -1,5 +1,34 @@
-<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal"
-  onClick = "this.style.visibility= 'hidden'">Open Modal</button>
+
+<div id= 'toptier-logo'>
+  <%=image_tag("logo.png")%>
+</div>
+
+  <!-- Arriba el logo toptier -->
+
+<div class="main-wrapper" id='laberinto'>
+  <div class="labyrinth-container">
+    <div id="clockdiv">
+      <span class="seconds"></span>
+      <div class="smalltext">Segundos</div>
+    </div>
+
+    <canvas id="demo" width="624" height="624" style="background: white"></canvas>
+    <div class="ficha-container">
+      <div id="chip" class="ficha"></div>
+    </div>
+  </div>
+
+  <div id="right">
+    <div id="c" class="card">
+      <label>Introduce los pasos aqui para resolver el laberinto </label>
+    </div>
+    <div>
+    <canvas class="arrow-canvas" id="can" width="470em" height="500em" style="background: transparent; margin-top: 110px;"></canvas>
+
+  </div>
+</div>
+
+ <!-- Laberinto arriba -->
 
 
 <div id="myModal" class="modal fade" role="dialog">
@@ -32,6 +61,7 @@
             <%= f.label :carrera, class: 'user-form' %>
             <%= f.text_field :career %>
           </div>
+          <%= f.hidden_field(:won, {value: "-1"}) %>
           <div class="modal-footer">
             <%= f.submit "Jugar", class: "user-button" %>
             <div class="clearfix"></div>
