javascript code improvement

--- a/app/views/users/create.js.erb
+++ b/app/views/users/create.js.erb
@@ -12,9 +12,9 @@ if (<%= @user.errors.empty? %>) {
     },
   }
 
-  document.getElementById('right').className = '';
-  document.getElementById('can').getContext('2d').clearRect(0, 0, can.width, can.height);
-
+  $('#can')[0].getContext('2d').clearRect(0, 0, can.width, can.height);
+  $('#right').attr('class', 'movements-container');
+  $('#chip').css( {transform: 'scale(1.0)'} );
   $('#user_name').val('');
   $('#user_last_name').val('');
   $('#user_email').val('');
