--- a/app/assets/stylesheets/styles.scss.erb
+++ b/app/assets/stylesheets/styles.scss.erb
@@ -5,11 +5,13 @@ html, body {
 body {
     font-family: 'Source Code Pro', 'Courier', monospace;
     margin: 0;
+
 }
 
 .main-container {
   position: relative;
   height: 100%;
+  overflow: hidden;
 }
 
 .main-toptier-logo {
@@ -86,8 +88,9 @@ body {
 .movements-container {
   background-color: white;
   display: inline-block;
-  padding: 0 15px;
+  padding: 0 1px;
   width: 350px;
+  margin-left: 10px;
 }
 
 .card {
