--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -23,7 +23,7 @@
     <div id="c" class="card">
       <label>Introduce los pasos aquí para resolver el laberinto </label>
     </div>
-    <div>
+    <div style="margin-top: -85px";>
     <canvas class="canvas-draw" id="can" width="330em" height="500em" style="background: transparent; margin-top: 110px;"></canvas>
   </div>
 </div>
