--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -1,33 +1,32 @@
 
-<div id= 'toptier-logo'>
+<div id='toptier-logo' class="main-toptier-logo" >
   <%=image_tag("logo.png")%>
 </div>
 
   <!-- Arriba el logo toptier -->
 
-<div class="main-wrapper" id='laberinto'>
+<div id='laberinto' class="main-wrapper" >
   <div class="labyrinth-container">
-    <div id="clockdiv">
-      <span class="seconds"></span>
-      <div class="smalltext">Segundos</div>
+    <div id="clockdiv" class="clock" >
+      <span class="clock-seconds-title"></span>
+      <div class="clock-text">Segundos</div>
     </div>
 
-    <canvas id="demo" width="624" height="624" style="background: white"></canvas>
-    <div class="ficha-container">
-      <div id="chip" class="ficha"></div>
+    <canvas id="demo" class="canvas-draw" width="624" height="624" style="background: white"></canvas>
+
+    <div class="chip-container">
+      <div id="chip" class="chip"></div>
     </div>
   </div>
 
-  <div id="right">
+  <div id="right" class="movements-container">
     <div id="c" class="card">
-      <label>Introduce los pasos aqui para resolver el laberinto </label>
+      <label>Introduce los pasos aquí para resolver el laberinto </label>
     </div>
     <div>
-    <canvas class="arrow-canvas" id="can" width="470em" height="500em" style="background: transparent; margin-top: 110px;"></canvas>
-
+    <canvas class="canvas-draw" id="can" width="330em" height="500em" style="background: transparent; margin-top: 110px;"></canvas>
   </div>
 </div>
-
  <!-- Laberinto arriba -->
 
 
