--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -20,11 +20,11 @@
   </div>
 
   <div id="right" class="movements-container">
-    <div id="c" class="card">
+    <div id="cardMovements" class="card">
       <label>Introduce los pasos aquí para resolver el laberinto </label>
     </div>
     <div style="margin-top: -85px";>
-    <canvas class="canvas-draw" id="can" width="330em" height="500em" style="background: transparent; margin-top: 110px;"></canvas>
+    <canvas class="canvas-draw" id="movementCanvas" width="330em" height="500em" style="background: transparent; margin-top: 110px;"></canvas>
   </div>
 </div>
  <!-- Laberinto arriba -->
