--- a/app/assets/javascripts/noscroll.js.erb
+++ b/app/assets/javascripts/noscroll.js.erb
@@ -5,7 +5,7 @@ var GRID_LENGTH = 8;
 var TIMEOUT = 600;
 var H_HOLE = 8;
 var V_HOLE = 9;
-tile_index = 1;//Math.floor((Math.random() * 4));
+tile_index = Math.floor((Math.random() * 4));
 lose = false;
 allMovements = [];
 
