--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -42,15 +42,15 @@
         <%= form_for @user, url: users_path, remote: true, method: :post do |f| %>
           <div class="form-group">
             <%= f.label :Nombre, class: 'user-form' %>
-            <%= f.text_field :name %>
+            <%= f.text_field :name, required: true %>
           </div>
           <div class='block-form'>
             <%= f.label :Apellido, class: 'user-form' %>
-            <%= f.text_field :last_name %>
+            <%= f.text_field :last_name,  required: true %>
           </div>
           <div class='block-form'>
             <%= f.label :Email, class: 'user-form' %>
-            <%= f.text_field :email %>
+            <%= f.email_field :email,  required: true %>
           </div>
           <div class='block-form'>
             <%= f.label :Dirección, class: 'user-form' %>
