--- a/app/views/home/index.html
+++ b/app/views/home/index.html
@@ -1,8 +1,13 @@
 
 <div id='toptier-logo' class="main-toptier-logo" >
   <%=image_tag("logo.png")%>
+   <video id="video1" autoplay="true" src="../assets/tutorial.mov" width="440" height="400">
+      
+    </video>
 </div>
-
+<div>
+  
+  </div>
   <!-- Arriba el logo toptier -->
 
 <div class="main-wrapper" >
