--- a/app/assets/stylesheets/styles.scss.erb
+++ b/app/assets/stylesheets/styles.scss.erb
@@ -17,6 +17,9 @@ body {
 .main-toptier-logo {
   background-color: white;
   display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
   position: absolute;
   top: 0;
   bottom: 0;
