--- a/app/views/users/create.js.erb
+++ b/app/views/users/create.js.erb
@@ -1,5 +1,5 @@
 if (<%= @user.errors.empty? %>) {
-  $('#myModal').modal('hide');
+  $('#register-modal').modal('hide');
 
   status = 1;
   playedCounter = 0;
