--- a/app/assets/javascripts/noscroll.js.erb
+++ b/app/assets/javascripts/noscroll.js.erb
@@ -320,41 +320,17 @@ loseOrWin = function (){
 
   if(lose){
     allMovements = [];
-    setTimeout(
-      function() {
-        swal({
-          title: 'Perdiste',
-          imageUrl: '../assets/dead.jpg',
-          imageWidth: 400,
-          imageHeight: 200,
-          showCancelButton: showRestartButton,
-          confirmButtonColor: '#3085d6',
-          cancelButtonColor: '#d33',
-          confirmButtonText: 'Registrarse',
-          cancelButtonText: 'Volver a intentar'
-        },
-          function(isConfirm) {
-            if (!isConfirm) {
-              restartPage();
-            } else {
-              $('#myModal').modal('show');
-            }
-
-          }
-        )}, 1000);
-
+    setTimeout(function(){
+      $('#lose-modal').modal('show');
+    }, 1000);
   } else {
     var audioWin = document.createElement("audio");
     audioWin.src = "../assets/win.m4a";
     audioWin.play()
     setTimeout(
-      function() {
-
-        swal({ title: "Ganaste", text: "", imageUrl: '../assets/win.jpg',
-           timer: 2500, showConfirmButton: false }
-             )}, 1000);
-        setTimeout( function() {
-          $('#myModal').modal('show')}, 3500);
+      function(){
+        $('#win-modal').modal('show');
+      }, 1000);
 
   }
   Game.audio.pause();
