--- a/app/assets/stylesheets/styles.scss.erb
+++ b/app/assets/stylesheets/styles.scss.erb
@@ -3,9 +3,8 @@ html, body {
 }
 
 body {
-    font-family: 'Source Code Pro', 'Courier', monospace;
-    margin: 0;
-
+  font-family: Lato !important;
+  margin: 0;
 }
 
 .main-container {
@@ -44,15 +43,14 @@ body {
 }
 
 .canvas-draw {
-    display: inherit;
-    margin: 0 auto;
-    background: #000;
+  display: inherit;
+  margin: 0 auto;
+  background: #000;
 }
 
 .labyrinth-container {
   position: relative;
   margin-top: 15px;
-  /*flex-grow: 1;*/
 }
 
 .subtitle {
@@ -78,7 +76,6 @@ body {
   bottom: -70px;
   left: 10;
   transition: all 1s ease;
-
 }
 
 .movements-container {
@@ -133,3 +130,6 @@ body {
   transition: visibility 0s 2s, opacity 2s linear;
 }
 
+.clearfix {
+  clear: both;
+}
