--- a/app/assets/stylesheets/modals.scss
+++ b/app/assets/stylesheets/modals.scss
@@ -11,16 +11,17 @@
 }
 
 .modal-content {
+  align-items: center;
 	border: none;
 	border-radius: 0;
 	color: white;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
+  height: 75%;
+  min-height: 530px;
 	padding: 30px;
-	text-align: center;
-	height: 75%;
+  text-align: center;
   width: 70%;
 
   background: #207cca; /* Old browsers */
@@ -45,8 +46,19 @@
 	font-weight: 400;
 }
 
+.modal-title {
+	font-size: 46px;
+	font-weight: 100;
+}
+
+.modal-sub-title {
+	font-size: 32px;
+	font-weight: 100;
+	width: 50%;
+}
+
 .win-modal {
-	
+
 	.modal-title {
 		font-size: 46px;
 		font-weight: 500;
@@ -59,7 +71,7 @@
 		width: 100%;
 	}
 
-	div .modal-button-register {
+	.modal-button-register {
 		background-color: #FFC500;
 		border: none;
 		border-radius: 10px;
@@ -85,7 +97,7 @@
 		font-weight: 500;
 	}
 
-	div .modal-button-register {
+	.modal-button-register {
 		background-color: #FFC500;
 		border: none;
 		border-radius: 10px;
@@ -97,7 +109,7 @@
 		font-weight: 400;
 	}
 
-	div .modal-button-restart {
+	.modal-button-restart {
 		border: none;
 		border-radius: 10px;
     width: 35%;
@@ -108,18 +120,6 @@
 		font-weight: 400;
 	}
 }
-
-.modal-title {
-	font-size: 46px;
-	font-weight: 100;
-}
-
-.modal-sub-title {
-	font-size: 32px;
-	font-weight: 100;
-	width: 50%;
-}
-
 
 .registration-modal {
 	display: flex;
@@ -157,7 +157,7 @@
 
 	.button-registration {
 		background-color: #F6881C;
-		border-radius: 4px; 
+		border-radius: 4px;
 		font-size: 18px;
 		font-weight: 300;
 		margin-top: 15px;
@@ -172,7 +172,7 @@
 
 	label {
 		display: block;
-		font-size: 16px; 
+		font-size: 16px;
     font-weight: bold;
 		margin: 0;
 		text-align: left;
@@ -182,7 +182,7 @@
 		border: 1px solid #287DAA;
 		display: block;
 		font-size: 18px;
-		padding: 6px 12px; 
+		padding: 6px 12px;
 		width: 50%;
 	}
 }
