--- a/app/assets/stylesheets/styles.scss.erb
+++ b/app/assets/stylesheets/styles.scss.erb
@@ -26,10 +26,9 @@ body {
   right: 0;
   z-index: 1;
 
-  img {
-    height: 50%;
-    width: auto;
-    margin: auto;
+  video {
+    height: 100%;
+    width: 100%;
   }
 }
 
