--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,14 +1,8 @@
 
 <div id='toptier-logo' class="main-toptier-logo" >
-  <%=image_tag("logo.png")%>
-   <video id="video1" autoplay="true" src="../assets/tutorial.mov" width="440" height="400">
-      
-    </video>
+  <video id="video1" autoplay="true" src="../assets/tutorial_2.mov" width="440" height="400"></video>
 </div>
-<div>
-  
-  </div>
-  <!-- Arriba el logo toptier -->
+<!-- Arriba el logo toptier -->
 
 <div class="main-wrapper" >
   <div class="labyrinth-container">
