--- a/app/views/users/create.js.erb
+++ b/app/views/users/create.js.erb
@@ -26,7 +26,7 @@ if (<%= @user.errors.empty? %>) {
   $('#toptier-logo').fadeIn(1000);
 
   myVideo = document.getElementById("video1");
-  myVideo.src = "../assets/tutorial.mov";
+  myVideo.src = "../assets/tutorial_2.mov";
   myVideo.load();
   myVideo.play();
 
@@ -34,4 +34,3 @@ if (<%= @user.errors.empty? %>) {
 } else {
   // Show errors
 }
-
